--- a/css/main.css
+++ b/css/main.css
@@ -806,7 +806,7 @@ body {
 
 .work__overley {
   position: absolute;
-  width: 370px;
+  width: 100%;
   height: 70px;
   bottom: 0px;
   padding-top: 27px;
@@ -1767,4 +1767,189 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  color: #000000;
+}
+
+.form-label {
+  position: relative;
+  margin-bottom: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  width: 100%;
+}
+
+.form__title {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 700;
+  text-align: center;
+  width: 100%;
+  font-size: 20px;
+  line-height: 30px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 12px;
+}
+@media screen and (min-width: 1200px) {
+  .form__title {
+    font-size: 20px;
+    line-height: 23px;
+  }
+}
+
+.form-label__input {
+  height: 40px;
+  width: 100%;
+  border-radius: 4px;
+  padding-left: 40px;
+  border: none;
+  outline: 1px solid rgba(33, 33, 33, 0.2);
+  -webkit-transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-label__input:focus {
+  outline: 1px solid #2196f3;
+  fill: #2196f3;
+}
+
+.form-label__icon {
+  position: absolute;
+  top: 50%;
+  margin-left: 12px;
+}
+.form-label:focus-within .form-label__icon {
+  fill: #2196f3;
+}
+
+.form-label__text {
+  margin-bottom: 4px;
+  color: #757575;
+}
+
+.label-comment {
+  margin-bottom: 20px;
+}
+
+.label-comment__form {
+  width: 100%;
+  height: 120px;
+  resize: none;
+  border: none;
+  outline: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 11px 15px;
+  -webkit-transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.label-comment__form:focus {
+  outline: 1px solid #2196f3;
+}
+
+.label-checkbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 30px;
+  -webkit-transition: background-color 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.label-checkbox__input:focus + .label-checkbox__icon {
+  outline: 1px solid #188ce8;
+}
+.label-checkbox__text {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 0.85;
+  letter-spacing: 0.03em;
+  color: #757575;
+  margin-left: 8.38px;
+}
+@media screen and (min-width: 1200px) {
+  .label-checkbox__text {
+    font-size: 14px;
+    line-height: 0.583;
+  }
+}
+
+.checkbox-text-decoration {
+  text-decoration: underline;
+  color: #2196f3;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.checkbox-text-decoration:hover, .checkbox-text-decoration:focus {
+  color: #188ce8;
+}
+
+.label-checkbox__icon {
+  background-color: #ffffff;
+  border: 2px solid #212121;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.label-checkbox__input:checked + .label-checkbox__icon {
+  background-color: #2196f3;
+  border-color: transparent;
+}
+
+.form-btn {
+  background-color: #2196f3;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  cursor: pointer;
+  font-family: inherit;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: #ffffff;
+  min-width: 200px;
+  border: 1px solid transparent;
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  max-width: 200px;
+  height: 50px;
+  margin: 0 auto;
+  padding: 10px 55px;
+}
+.form-btn:hover, .form-btn:focus {
+  background-color: #188ce8;
+}
+
+.label-checkbox__input {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }/*# sourceMappingURL=main.css.map */
