--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -19,7 +19,7 @@
 }
 .work__overley {
   position: absolute;
-  width: 370px;
+  width: 100%;
   height: 70px;
   bottom: 0px;
   padding-top: 27px;
