--- a/sass/main.css
+++ b/sass/main.css
@@ -110,7 +110,8 @@ header {
   color: var(--header-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.list-header__link:hover, .list-header__link:focus {
+.list-header__link:hover,
+.list-header__link:focus {
   color: var(--accent-text-color);
 }
 
@@ -158,7 +159,8 @@ header {
   color: var(--header-tel-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.list-header__addres:hover, .list-header__addres:focus {
+.list-header__addres:hover,
+.list-header__addres:focus {
   color: var(--accent-text-color);
 }
 
@@ -173,7 +175,11 @@ header {
   padding-bottom: 200px;
   align-items: center;
   background-color: #2f303a;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg.jpg);
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/hero-bg.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -280,27 +286,24 @@ header {
   display: flex;
   flex-wrap: wrap;
   margin-right: 30px;
-}
-
-.work__img {
   position: relative;
 }
 
 .work__overley {
   position: absolute;
-  width: 370px;
+  width: 100%;
   height: 70px;
-  bottom: 0px;
+  bottom: 0;
   padding-top: 27px;
   background: rgba(47, 48, 58, 0.8);
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
-  line-height: 1.1428571429;
+  line-height: calc(16 / 14);
   text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #ffffff;
+  color: var(--white-color);
 }
 
 .list-staff {
@@ -316,7 +319,8 @@ header {
   width: 270px;
   margin-right: 30px;
   background-color: var(--hero-text-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 .list-staff__img:nth-child(4n) {
@@ -373,14 +377,18 @@ header {
   color: var(--icon-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.list-social-media__link:hover, .list-social-media__link:focus {
+.list-social-media__link:hover,
+.list-social-media__link:focus {
   background-color: var(--accent-text-color);
 }
 
 .list-social-media__icon {
   fill: currentColor;
 }
-.list-social-media__link:hover .list-social-media__icon .list-social-media__link:focus .list-social-media__icon {
+.list-social-media__link:hover
+  .list-social-media__icon
+  .list-social-media__link:focus
+  .list-social-media__icon {
   background-color: var(--accent-text-color);
   fill: #ffffff;
 }
@@ -415,7 +423,8 @@ header {
   color: var(--icon-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.list-clients__link:hover, .list-clients__link:focus {
+.list-clients__link:hover,
+.list-clients__link:focus {
   border: 1px solid var(--accent-text-color);
   color: var(--accent-text-color);
 }
@@ -441,8 +450,10 @@ header {
   display: block;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-element__link:hover, .portfolio-element__link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.6), 1px 4px 6px rgba(0, 0, 0, 0.16);
+.portfolio-element__link:hover,
+.portfolio-element__link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.6),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portfolio-conteiner {
@@ -468,7 +479,7 @@ header {
 .portfolio-element__card:nth-child(3n) {
   margin-right: 0;
 }
-.portfolio-element__card:nth-last-child(-n+3) {
+.portfolio-element__card:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
 
@@ -513,10 +524,12 @@ header {
 .btn__text {
   cursor: pointer;
 }
-.btn__text:hover, .btn__text:focus {
+.btn__text:hover,
+.btn__text:focus {
   color: #ffffff;
   background-color: #188ce8;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.6), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.6),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portfolio-container {
@@ -554,7 +567,8 @@ header {
   background-color: rgba(33, 150, 243, 0.9);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-element__link:hover .project-description-translate__text, .portfolio-element__link:focus .project-description-translate__text {
+.portfolio-element__link:hover .project-description-translate__text,
+.portfolio-element__link:focus .project-description-translate__text {
   opacity: 1;
   transition-duration: 250ms;
   transform: translateY(0px);
@@ -598,7 +612,8 @@ header {
   min-width: 528px;
   min-height: 581px;
   background: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 40px;
@@ -770,7 +785,8 @@ header {
   cursor: pointer;
   color: var(--hero-text-color);
   background-color: #188ce8;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .list-footer {
@@ -816,7 +832,8 @@ header {
   color: var(--footer-tel-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.list-footer__contact:hover, .list-footer__contact:focus {
+.list-footer__contact:hover,
+.list-footer__contact:focus {
   color: var(--accent-text-color);
 }
 
@@ -863,7 +880,8 @@ header {
   background-color: rgba(255, 255, 255, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-social-media__link:hover, .footer-social-media__link:focus {
+.footer-social-media__link:hover,
+.footer-social-media__link:focus {
   background-color: var(--accent-text-color);
 }
 
@@ -934,4 +952,4 @@ header {
 
 .form-mail__block {
   display: flex;
-}/*# sourceMappingURL=main.css.map */
+} /*# sourceMappingURL=main.css.map */
